--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
     "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.15",
     "cytoscape": "^3.31.0",
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-popper": "^4.0.1",
     "d3": "^7.9.0",
+    "lodash": "^4.17.21",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
