--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-select": "^2.1.6",
     "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.15",
+    "clsx": "^2.1.1",
     "cytoscape": "^3.31.0",
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-popper": "^4.0.1",
     "d3": "^7.9.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^2.1.7",
+    "tailwind-merge": "^3.0.2",
     "tippy.js": "^6.3.7",
     "ts-faker": "^0.0.5",
     "zustand": "^5.0.3"
