--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-popper": "^4.0.1",
     "d3": "^7.9.0",
+    "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
