--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.15",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cytoscape": "^3.31.0",
     "cytoscape-dagre": "^2.5.0",
