--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "narrative_subway",
-  "version": "0.1.0",
+  "name": "narrative_matrix",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
